--- a/assets/js/templates/app/renderjson.html
+++ b/assets/js/templates/app/renderjson.html
@@ -1,3 +1,3 @@
 <h3>Rendered JSON of your form:</h3>
+<textarea id="jsonrender" class="col-md-12"></textarea>
 <button id="loadJSON" name="loadJSON" class="btn btn-default">Load Custom Form</button>
-<textarea id="jsonrender" class="span6"></textarea>
